--- a/roles/k8s_deployment/templates/frontend-env.j2
+++ b/roles/k8s_deployment/templates/frontend-env.j2
@@ -1,1 +1,2 @@
-REACT_APP_API_URL={{ backend_url }}:5000/api
+#REACT_APP_API_URL={{ backend_url }}:5000/api
+VITE_API_BASE_URL=http://{{ backend_service_name }}.{{ namespace }}.svc.cluster.local:{{ backend_service_port }}/api
