--- a/roles/k8s_deployment/templates/frontend-env.j2
+++ b/roles/k8s_deployment/templates/frontend-env.j2
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=http://{{ backend_service_name }}.{{ k8s_namespace | default('default') }}.svc.cluster.local:{{ backend_service_port }}/api
+VITE_API_BASE_URL=http://{{ backend_service_name }}.{{ k8s_namespace | default('default') }}.svc.cluster.local:{{ backend_service_port | default('5000') }}/api
