--- a/roles/k8s_deployment/templates/cloudmart-frontend.yaml.j2
+++ b/roles/k8s_deployment/templates/cloudmart-frontend.yaml.j2
@@ -14,6 +14,9 @@ spec:
     metadata:
       labels:
         app: {{ frontend_app_name }}
+      annotations:
+        # This forces redeployment when the ConfigMap changes
+        configmap-checksum: "{{ '{{' }} lookup('k8s', kind='ConfigMap', namespace=k8s_namespace | default('default'), resource_name='frontend-env-config') | to_json | hash('md5') {{ '}}' }}"
     spec:
       volumes:
       - name: env-config
@@ -48,15 +51,6 @@ spec:
             port: http
           initialDelaySeconds: 15
           periodSeconds: 15
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: frontend-env-config
-  namespace: "{{ k8s_namespace | default('default') }}"
-data:
-  .env: |
-    VITE_API_BASE_URL=http://{{ backend_service_name }}.{{ k8s_namespace | default('default') }}.svc.cluster.local:{{ backend_service_port | default('5000') }}/api
 ---
 apiVersion: v1
 kind: Service
